--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.4.2",
     "use-local-storage-state": "^19.2.0",
+    "vaul": "^0.9.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
